--- a/src/App.scss
+++ b/src/App.scss
@@ -6,9 +6,16 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-  
+
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
-  
+
+  .app-container {
+    .add-new {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
